<resources>
    <string name="app_name">CV_Builder</string>
    <string name="logo">logo</string>
    <string name="title">CV MAKER</string>
    <string name="doc">doc</string>
    <string name="cv_builder">CV Builder</string>
    <string name="personal_details">Personal Details</string>
    <string name="summary">Summary</string>
    <string name="certifications">Certifications</string>
    <string name="experience">Experience</string>
    <string name="education">Education</string>
    <string name="references">References</string>
    <string name="profile_picture_title">Profile Picture</string>
    <string name="img">img</string>
    <string name="upload">upload</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="profile_details">Profile Details</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="professional_summary">Professional Summary</string>
    <string name="write_your_professional_summary">Write your professional summary…</string>
    <string name="institution">Institution</string>
    <string name="institution_hint">University Name</string>
    <string name="degree">Degree</string>
    <string name="degree_hint">Bachelor of Science</string>
    <string name="dates">Dates</string>
    <string name="dates_hint">MM/YYYY - MM/YYYY</string>

    <string name="company">Company</string>
    <string name="company_hint">Company Name</string>
    <string name="position">Position</string>
    <string name="position_hint">Software Engineer</string>
    <string name="duration">Duration</string>
    <string name="duration_hint">MM/YYYY - MM/YYYY</string>
    <string name="description">Description</string>
    <string name="description_hint">Key responsibilities and achievements</string>


    <string name="certificates">Certifications</string>
    <string name="certificate_name">Certificate Name</string>
    <string name="cert_name_hint">Meta React Developer</string>
    <string name="issuing_org">Issuing Organization</string>
    <string name="org_hint">META</string>
    <string name="date_earned">Date Earned</string>
    <string name="date_earned_hint">MM/YYYY</string>


    <string name="reference_name">Reference Name</string>
    <string name="name_hint">Elon Musk</string>
    <string name="ref_position">Position</string>
    <string name="ref_position_hint">Senior Manager</string>
    <string name="ref_company">Company</string>
    <string name="ref_company_hint">Tesla</string>
    <string name="contact">Contact</string>
    <string name="contact_hint">musk@email.com | +1234567890</string>
    <string name="share">Share</string>
    <string name="preview">Preview</string>
</resources>